Fix Table Truncate

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -73,3 +73,8 @@ body {
         }
     }
 }
+
+td.truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
